--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -244,7 +244,12 @@ Per il tracciamento degli errori e delle loro soluzioni ci si avvarr\`a degli st
 
 \subsezione{Infrastrutture e procedure di automazione} 
 Hanno lo scopo di accelerare tutte le attivit\`a di verifica e impedire errori umani.
-Tali attivit\`a potranno quindi essere svolte dopo ogni singolo cambiamento, anche di piccola entit\`a. Saranno predisposte dai verificatori. 
+Tali attivit\`a potranno quindi essere svolte dopo ogni singolo cambiamento, anche di piccola entit\`a. Saranno predisposte dai verificatori.
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{flussi.png}
+\caption{flussi}
+\end{figure} 
 Sono raggruppabili in 3 categorie:
 
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
@@ -255,7 +260,9 @@ Sono raggruppabili in 3 categorie:
 
 \item \textit{Verifica e Validazione}
 : ampiamente descritte nella sezione 2.1. Sono realizzate dal personale dell'azienda hanno il compito di testare che tutte le singole unit\`a del software, messe assieme tra loro, soddisfino in maniera adeguata le richieste del committente. Molto utile per eliminare gli errori umani.
+
 \end{elenconumerato}
+
 
  
 \sezione{Gestione amministrativa della revisione}
