correzioni piano di progetto

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -264,14 +264,14 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 
 \subsezione{Assunzioni Iniziali}
 \begin{itemize}
-\item Il costo totale stimato \`e di 13778 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
+\item Il costo totale stimato \`e di 13770 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
 \item Sono previste 669 ore di lavoro totali per la realizzazione del progetto.
 \item L'impegno individuale di ogni componente varia da un minimo di 90 ore ad un massimo di 100 ore.
 \end{itemize}
 
 
 \subsezione{Attribuzione dei Ruoli}
-Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebShape costituito da sei membri, si avr\`a una media di circa 105 ore di lavoro per persona. La durata complessiva del progetto sar\`a di circa 670 ore, ogni componente lavorer\`a quindi una media di circa 2 ore giornaliere. Sono previste altre tre revisioni:
+Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebShape costituito da sei membri, si avr\`a una media di circa 105 ore di lavoro per persona. La durata complessiva del progetto sar\`a di circa 669 ore, ogni componente lavorer\`a quindi una media di circa 2 ore giornaliere. Sono previste altre tre revisioni:
 \begin{elenconumerato}{\normindent}
 				\item Revisione di Progetto Preliminare (RPP)
 				\item Revisione di Qualifica (RQ)
@@ -294,13 +294,13 @@ In questa sottosezione verr\` a illustrato il preventivo totale, comprendente i 
 		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
 		 \hline
 		Responsabile & 66 & 1980 \\
-		Amministratore & 95 & 1900\\
+		Amministratore & 87 & 1740\\
 		Analista & 98 & 2450\\
-		Progettista & 148 & 3256\\
-		Programmatore & 101 & 1616 \\
-		Verificatore & 161 & 2576\\
+		Progettista & 152 & 3344\\
+		Programmatore & 107 & 1712 \\
+		Verificatore & 159 & 2544\\
         \hline
-        \textbf{Totale} & \textbf{669} & \textbf{13778}\\
+        \textbf{Totale} & \textbf{669} & \textbf{13770}\\
 		\hline
 		\end{tabular}
 	\caption{Preventivo totale} 
@@ -315,7 +315,9 @@ In questa sottosezione verr\` a illustrato il preventivo totale, comprendente i 
 
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
-\includegraphics[width=350pt]{Costi_Totali}
+\includegraphics[width=300pt]{Costi_Totali}
+
+\newpage
 
 \subsezione{Pianificazione economico-temporale RR-RPP}
 All'interno di questa fase si concluder\`a la fase di analisi e inizier\`a quella di progettazione, con la definizione di un progetto di massima che si svilupper\`a e concretizzer\`a nelle due iterazioni previste all'interno della fase RPP-RQ, descritta in seguito. \\
@@ -398,13 +400,13 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
 		 \hline
 		Responsabile & 8 & 240 \\
-		Amministratore & 18 & 360\\
+		Amministratore & 10 & 200\\
 		Analista & 0 & 0\\
-		Progettista & 4 & 88\\
-		Programmatore & 7 & 112 \\
-		Verificatore & 18 & 288\\
+		Progettista & 8 & 176\\
+		Programmatore & 13 & 208 \\
+		Verificatore & 16 & 256\\
         \hline
-        \textbf{Totale} & \textbf{55} & \textbf{1088}\\
+        \textbf{Totale} & \textbf{55} & \textbf{1080}\\
 		\hline
 		\end{tabular}
 	\caption{Preventivo RQ-RA} 
@@ -524,7 +526,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 	\label{tab:TabellaRotazRuoliDue}
 	\end{center}	
 \end{table}
-
+\newpage
 \subsubsezione{Distribuzione dei carichi di lavoro}
 %Distribuzione del carico di lavoro per membro del gruppo.\\
 
@@ -564,6 +566,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 	\end{center}	
 \end{table}
 
+\newpage
 \sezione{Consuntivi}
 \subsezione{Fase RR-RPP}
 \begin{table}[h]
@@ -590,6 +593,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
 \includegraphics[width=300pt]{Cons-RR-RPP2}
+\newpage
 
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
@@ -636,6 +640,8 @@ Come si pu\`o vedere dai dati precendentemente elencati si sono rivelate necessa
 sono stati richiesti sforzi maggiori dal ruolo di amministratore per l'attuazione di piani e procedure di gestione della qualit\`a ed
 analista per analizzare pi\`u a fondo i requisiti. I ruoli di responsabile, progettista e verificatore hanno invece richiesto minori
 risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
+
+\newpage
 
 \sezione{Gestione del Piano di Progetto}
 \subsezione{Obiettivi}
