--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -247,9 +247,10 @@ Hanno lo scopo di accelerare tutte le attivit\`a di verifica e impedire errori u
 Tali attivit\`a potranno quindi essere svolte dopo ogni singolo cambiamento, anche di piccola entit\`a. Saranno predisposte dai verificatori.
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{flussi.png}
+\includegraphics[scale=0.5]{flussi.png}
 \caption{flussi}
 \end{figure} 
+\newpage
 Sono raggruppabili in 3 categorie:
 
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
