descritta classe Clean

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -1205,8 +1205,8 @@ Mantiene un'istanza di \textit{File}.
 \subsubsezione{Attivit\`a svolte e dati trattati}
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\normindent]
-\item[-] \textit{sweeper()} controlla tramite una classe filtro se esistono dei file sul server inutilizzati da un determinato periodo e tramite la classe \textit{File} li rimuove.
-\end{elencopuntato}[\normindent]
+\item[-] \textit{sweeper()} controlla tramite una classe filtro se esistono dei file sul server inutilizzati da un determinato periodo, e li rimuove usando la classe \textit{File}.
+\end{elencopuntato}
 
 \subsezione{CommunicationError}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
